--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -2,6 +2,7 @@
 @import '@nuxt/ui';
 
 @config '../../tailwind.config.ts';
+@plugin "@tailwindcss/typography";
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
